--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,12 +159,24 @@ jobs:
             pegasus_port: 3000
             " >> locals.yml
 
+      - restore_cache:
+        keys:
+          - code-dot-org-ui-test-data-v1-{{ .Branch }}-{{ .Revision }}
+          - code-dot-org-ui-test-data-v1-{{ .Branch }}-
+          - code-dot-org-ui-test-data-v1-staging
+
       - run:
           name: run ui tests
           command: |
             bundle exec rake circle:run_ui_tests --trace
             cookbooks/test.sh
           no_output_timeout: 20m
+
+      - save_cache:
+          key: code-dot-org-ui-test-data-v1-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - "dashboard/db/ui_test_data.commit"
+            - "dashboard/db/ui_test_data.sql"
 
       - run:
           name: deployment
