--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,9 +161,18 @@ jobs:
 
       - restore_cache:
           keys:
-            - code-dot-org-ui-test-data-v1-{{ .Branch }}-{{ .Revision }}
-            - code-dot-org-ui-test-data-v1-{{ .Branch }}-
-            - code-dot-org-ui-test-data-v1-staging
+            - code-dot-org-ui-test-data-v1-staging-
+
+      - run:
+          name: seed ui tests
+          command: bundle exec rake seed:cached_ui_test
+          working_directory: dashboard
+
+      - save_cache:
+          key: code-dot-org-ui-test-data-v1-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - "dashboard/db/ui_test_data.commit"
+            - "dashboard/db/ui_test_data.sql"
 
       - run:
           name: run ui tests
@@ -171,12 +180,6 @@ jobs:
             bundle exec rake circle:run_ui_tests --trace
             cookbooks/test.sh
           no_output_timeout: 20m
-
-      - save_cache:
-          key: code-dot-org-ui-test-data-v1-{{ .Branch }}-{{ .Revision }}
-          paths:
-            - "dashboard/db/ui_test_data.commit"
-            - "dashboard/db/ui_test_data.sql"
 
       - run:
           name: deployment
